# yolov5_small_target_detect-main

./: .gitignore  =1.3.0  README_TX2_TensorRT.md  activate_env.sh  detect.py  requirements.txt  resolution_comparison_test.py  setup_conda_env.sh  train.py  tx2_realtime_detect.py
data/: 123.yaml  1234.yaml  BB-Fire.yaml  BB-Wedet-Drone.yaml  SEG-deepsea-mn.yaml  dataset.yaml
data/hyps/: hyp.small-target-aggressive.yaml  hyp.small-target-conservative.yaml  hyp.small-target.yaml  hyp.yaml
docs/: YOLOv5小目标检测优化指南.md
segment/: train.py
small_target_detection/configs/: hyp.small-target-aggressive.yaml  hyp.small-target-conservative.yaml  hyp.small-target.yaml
small_target_detection/docs/: README.md  YOLOv5小目标检测完整使用文档.md  目录文档.md
small_target_detection/docs/scripts/: compare_evaluation_results.md  evaluate_detection.md  generate_charts.md  gui_test.md  small_target_train.md  start_training.md  test_videos_usage.md  training_monitor.md  update_labels_class_usage.md
small_target_detection/scripts/: compare_evaluation_results.py  compare_models.py  evaluate_detection.py  generate_charts.py  gui_test.py  small_target_train.py  start_training.py  test_videos.py  training_monitor.py  update_labels_class.py
utils/: downloads.py  general.py  plots.py
yolov5_ros/: CMakeLists.txt  README.md  package.xml  setup.py
yolov5_ros/config/: yolov5_config.yaml
yolov5_ros/launch/: yolov5_detection.launch  yolov5_tensorrt.launch
yolov5_ros/msg/: BoundingBox.msg  Detection.msg  DetectionArray.msg
yolov5_ros/scripts/: yolov5_camera_node.py  yolov5_detection_node.py
yolov5_ros/src/yolov5_ros/: __init__.py
