<?xml version="1.0"?>
<package format="2">
  <name>yolov5_ros</name>
  <version>1.0.0</version>
  <description>YOLOv5 ROS package for real-time object detection with TensorRT acceleration</description>

  <maintainer email="lkx@example.com">lkx</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>